--- a/magisterka.tex
+++ b/magisterka.tex
@@ -78,7 +78,7 @@ podstawowych zalet takiego podejścia należy:
 \begin{itemize}
 \item
 jest to międzynarodowy
-standard dostępny na wielu platformach sprzętowo\=systemowych;
+standard dostępny na wielu platformach sprzętowo\-systemowych;
 \item
 jest to
 język opisu \emph{każdego\/} dokumentu, o~praktycznie nieograniczonych
