dodano składanie bookmarków w hyperref

--- a/xmgr.cls
+++ b/xmgr.cls
@@ -22,7 +22,8 @@
 %
 \RequirePackage{color}
 \definecolor{xmgrBrickRed}{cmyk}{0,0.89,0.94,0.28}
-\usepackage[colorlinks=true,linkcolor=xmgrBrickRed,bookmarks=false]{hyperref}
+\usepackage{hyperref}
+\hypersetup{colorlinks=true,linkcolor=xmgrBrickRed,bookmarks=true}
 %
 \RequirePackage{url}
 \RequirePackage[polish]{polyglossia} 
