dodano opcję Numbers=OldStyle do \setmainfont

--- a/magisterka.tex
+++ b/magisterka.tex
@@ -1,8 +1,11 @@
 \documentclass[brudnopis]{xmgr}
 
 %\defaultfontfeatures{Scale=MatchLowercase}
-\setmainfont[Mapping=tex-text]{Minion Pro}
-\setsansfont[Mapping=tex-text]{Myriad Pro}
+%\setmainfont[Numbers=OldStyle,Ligatures=TeX]{Minion Pro}
+%\setsansfont[Numbers=OldStyle,Ligatures=TeX]{Myriad Pro}
+% for fontspec version < 2.0
+\setmainfont[Numbers=OldStyle,Mapping=tex-text]{Minion Pro}
+\setsansfont[Numbers=OldStyle,Mapping=tex-text]{Myriad Pro}
 %\setmonofont[Scale=0.75]{Monaco}
 
 % Opcjonalnie identyfikator dokumentu 
