polyglossia >= v1.2.0 no longer supports loading language definition files

--- a/magisterka.tex
+++ b/magisterka.tex
@@ -26,7 +26,7 @@
 \opiekun  {prof. dr hab. D. Htunk}
 
 % dodatkowe polecenia
-\newcommand{\filename}[1]{\texttt{#1}}
+%\renewcommand{\filename}[1]{\texttt{#1}}
 
 \begin{document}
 
