--- a/magisterka.tex
+++ b/magisterka.tex
@@ -30,6 +30,8 @@
 
 % dodatkowe polecenia
 %\renewcommand{\filename}[1]{\texttt{#1}}
+%\definecolor{stress}{cmyk}{0,1,0.13,0} % RubineRed
+%\definecolor{topic}{cmyk}{0.98,0.13,0,0.43} % MidnightBlue
 
 \begin{document}
 
