use standard CM/PL fonts

--- a/magisterka.tex
+++ b/magisterka.tex
@@ -1,14 +1,13 @@
 \documentclass[brudnopis]{xmgr}
-% Jeśli nowe rozdziały mają się zaczynać na stronach
-% nieparzystych:
+% Jeśli nowe rozdziały mają się zaczynać na stronach nieparzystych:
 %\documentclass[openright]{xmgr}
 
 %\defaultfontfeatures{Scale=MatchLowercase}
 %\setmainfont[Numbers=OldStyle,Ligatures=TeX]{Minion Pro}
 %\setsansfont[Numbers=OldStyle,Ligatures=TeX]{Myriad Pro}
 % for fontspec version < 2.0
-\setmainfont[Numbers=OldStyle,Mapping=tex-text]{Minion Pro}
-\setsansfont[Numbers=OldStyle,Mapping=tex-text]{Myriad Pro}
+% \setmainfont[Numbers=OldStyle,Mapping=tex-text]{Minion Pro}
+% \setsansfont[Numbers=OldStyle,Mapping=tex-text]{Myriad Pro}
 %\setmonofont[Scale=0.75]{Monaco}
 
 % Opcjonalnie identyfikator dokumentu
